# transcription

./: .gitignore  LICENSE  README.md  pyproject.toml  transcription.py
